--- a/templates/projects/snippets/cards.html
+++ b/templates/projects/snippets/cards.html
@@ -109,8 +109,8 @@
         </div>
          <!--- Social media buttons --->
           <a href="#" id="fb-share" target="_blank" class="btn btn-facebook"><i class="fa fa-facebook"></i> Share</a>
-          <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Fwww.libcrowds.com%2Fproject%2F{{project.short_name}}%2Ftask%2F734&text={{project.description}}
-          &tw_p=tweetbutton&url=http%3A%2F%2Fwww.libcrowds.com&via=britishlibrary" class="btn btn-twitter">
+          <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Fwww.libcrowds.com%2Fproject%2F{{project.short_name}}%2Ftask%2F734&text={{project.description}}&
+	  tw_p=tweetbutton&url=http%3A%2F%2Fwww.libcrowds.com&via=@libcrowds" class="btn btn-twitter">
   <i class="fa fa-twitter"></i> Tweet</a>
           </div>
     
