--- a/templates/base.html
+++ b/templates/base.html
@@ -99,5 +99,8 @@
       <script src="{{url_for('static', filename='js/vkbeautify.js')}}" type="text/javascript"></script>
       <script type="text/javascript" src="{{url_for('static', filename='js/scripts.min.js')}}?v=1.2.8"></script>
       <script type="text/javascript" src="{{url_for('static', filename='js/placeholders.min.js')}}" ></script>
+      {% if current_user.is_authenticated() and not current_user.info.avatar%}
+        <script>$.ajax('/api/user/set_default_avatar');</script>
+      {% endif %}
   </body>
 </html>
