--- a/templates/projects/snippets/cards.html
+++ b/templates/projects/snippets/cards.html
@@ -332,24 +332,25 @@ $(document).delegate('#oclc_search_form', 'submit', function(e) {
         break;
     }
   }
-  performSearch(searchStr, "1");
   performCount(countStr);
+  performSearch(searchStr, 1);
   Placeholders.enable();
 });
 
 
-function performSearch(searchStr, startPos) {
-  var page = parseInt(startPos, 10);
+function performSearch(searchStr, page) {
+  var startPos = (page - 1) * 5;
+  var endPos = startPos + 5;
    $.get(searchStr + "&startPos=" + startPos, function(results){
      var pageStr = '';
       	pageStr = '<div class="row text-center"><small><span>';
       	if (page > 1) {
-         pageStr+= '<a href="#" id="previous">&lt; Previous</a> | ' + page + ' to ';
+         pageStr+= '<a href="#" id="previous">&lt; Previous</a> | ' + (startPos + 1) + ' to ';
       	} else {
-      	    pageStr+= '&lt; Previous | ' + page + ' to ';
+      	    pageStr+= '&lt; Previous | ' + (startPos + 1) + ' to ';
       	}
-      if (page  + 4 < parseInt($("#search_results").attr("data-count"))) {
-        pageStr += (page  + 4) + ' of ' + $("#search_results").attr("data-count") +
+      if (endPos < parseInt($("#search_results").attr("data-count"))) {
+        pageStr += endPos + ' of ' + $("#search_results").attr("data-count") +
         ' | <a href="#" id="next">Next &gt;</a></span></small></div>';
       	} else {
         pageStr += $("#search_results").attr("data-count") + ' of ' + $("#search_results").attr("data-count") +
@@ -431,7 +432,7 @@ $("#shelfmark_field").blur(function() {
     $('#search_submit_btn').html('<span class="glyphicon glyphicon-refresh spinning"></span> Searching');
     $("#search_results").slideUp();
     $('#search_submit_btn').fadeTo(500, 0.3);
-    performSearch($("#search_results").attr("data-api"), parseInt($("#search_results").attr("data-page")) * 5);
+    performSearch($("#search_results").attr("data-api"), parseInt($("#search_results").attr("data-page")) + 1);
 });
 
 
@@ -440,8 +441,7 @@ $("#shelfmark_field").blur(function() {
     $('#search_submit_btn').html('<span class="glyphicon glyphicon-refresh spinning"></span> Searching');
     $("#search_results").slideUp();
     $('#search_submit_btn').fadeTo(500, 0.3);
-    var number = parseInt($("#search_results").attr("data-page"));
-    performSearch($("#search_results").attr("data-api"), (Math.round(number / 5) * 5) - 5);
+    performSearch($("#search_results").attr("data-api"), parseInt($("#search_results").attr("data-page")) - 1);
 });
 
 //Remove any trailing slashes from the returned records
