Fixed page redirects

--- a/templates/account/projects.html
+++ b/templates/account/projects.html
@@ -4,9 +4,9 @@
 <meta http-equiv="refresh" content="1; url={{ url_for('blplugin.open_project') }}">
  
 <script>
-  window.location.href = "{{ url_for('blplugin.open_project') }}"
+  window.location.href = "{{ url_for('blplugin.open_project') }}";
 </script>
  
 <title>Page Redirection</title>
  
-If you are not redirected automatically, follow the <a href='{{ url_for('blplugin.open_project') }}http://example.com'>link to the new page</a>
+If you are not redirected automatically, follow the <a href="{{ url_for('blplugin.open_project') }}">link to the new page</a>
