--- a/templates/projects/presenter.html
+++ b/templates/projects/presenter.html
@@ -11,21 +11,28 @@
 </script>
 <script src="{{url_for('static', filename="js/pybossa/pybossa.js")}}" type="text/javascript"></script>
 <script src="/static/vendor/jquery.serializejson.min.js" type="text/javascript"></script>
-<div id="api-key" data-key="{{current_user.api_key}}"></div>
     <div class="container-padded">
         <div class="container container-padded">
+        {% include "_flash_messages.html" %}
         {% if invite_new_volunteers %}
-        <div class="row">
-            <div class="col-xs-12">
-                {% include "_flash_messages_floating.html" %}
-                <p>
-                {{ _("Sorry, you've contributed to all the tasks for this project, but this project still needs more volunteers, so please spread the word!") }}
-                </p>
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1>Sorry, you've contributed to all the tasks for this project</h1>
+                    <h2>But this project still needs more volunteers, so please spread the word!</h2>
+                </div>
             </div>
-        </div>
         {% endif %}
-        {{ project.info.task_presenter|safe }}
         
+        {% if project.hidden == 0 %}
+            {{ project.info.task_presenter|safe }}
+        {% else %}
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1>Sorry, this project is currently hiding</h1>
+                    <h2>It will be revealed shortly, see you then!</h2>
+                </div>
+            </div>
+        {% endif %}
         
         <div id='PYBOSSA_USER_LOCALE' hidden>
         {% if current_user.is_anonymous() %}
