--- a/templates/projects/project.html
+++ b/templates/projects/project.html
@@ -17,10 +17,16 @@
                         {% include "_flash_messages.html" %}
                         {{ helper.render_project_title(project, upload_method) }}
                         {{ helper.render_overall_progress(project, n_tasks, overall_progress) }}
-                        {% if project.long_description %}
-                            <div class="description">
-                                {{ project.long_description | e | markdown }}
-                            </div>
+                        {% if overall_progress == 100 %}
+                            <h2>Many thanks to all those who helped us complete this project. Special thanks go out to
+                            our <a href="{{url_for('project.show_stats', short_name=project.short_name)}}">top volunteers</a> for their extra efforts!</h2>
+                        <p></p>
+                        {% else %}
+                            {% if project.long_description %}
+                                <div class="description">
+                                    {{ project.long_description | e | markdown }}
+                                </div>
+                            {% endif %}
                         {% endif %}
                         <div id="ckan" style="display:none">
                             <h2>Data repository: {{ ckan_name | default('CKAN server') }}</h2>
@@ -47,13 +53,13 @@
 <script>
     var url = "{{ckan_url}}/api/3/action/package_show";
     $.get(url, {id: '{{ckan_pkg_name}}'}, function(data){
-            if (data['success'] == true) {
-                $("#ckan").show();
-                if (data['result']['license_title'] != null) {
-                    $("#ckan_license").show();
-                }
+        if (data['success'] == true) {
+            $("#ckan").show();
+            if (data['result']['license_title'] != null) {
+                $("#ckan_license").show();
             }
-            });
+        }
+    });
 </script>
 {{ helper.broken_image() }}
 {{ helper.knob() }}
