Prevent search engine indexing of certain pages

--- a/templates/projects/presenter.html
+++ b/templates/projects/presenter.html
@@ -3,6 +3,8 @@
 {% set active_project = project.short_name %}
 
 {% block content %}
+<meta name="robots" content="noindex">
+    
 <script>
     Modernizr.load({
             test: window.JSON,
