--- a/templates/account/public_profile.html
+++ b/templates/account/public_profile.html
@@ -5,6 +5,8 @@
 {% import "privacy/locked.html" as privacy %}
 
 {% block content %}
+<meta name="robots" content="noindex">
+
 <span class="set-main-bg" data-bg="pattern-white-wall"></span>
 <div class="container-padded remove-padding-bottom">
     <section class="mid-grey pattern-brushed box-shadow-grey-bottom padding-bottom">
